@@ -1,5 +1,6 @@
 package blockchain.miner;
 
+import blockchain.config.Config;
 import blockchain.domain.Block;
 import blockchain.domain.Blockchain;
 import blockchain.trader.Trader;
@@ -13,24 +14,22 @@ import java.util.concurrent.ThreadLocalRandom;
 public class Miner extends Trader implements Callable<Block> {
     private final ArrayList<Block> currBlockchain;
     private final int N;
-    private final Random random;
 
     public Miner (Blockchain blockchain, String name) {
         super(blockchain, name);
         this.currBlockchain = blockchain.getBlockchain();
         this.N = blockchain.getN();
-        this.random = new Random();
     }
 
     @Override
     public Block call() {
         Block newBlock = new Block(
-                currBlockchain.isEmpty() ? 1 : currBlockchain.get(currBlockchain.size() - 1).getId()+1,
+                currBlockchain.isEmpty() ? 1 : currBlockchain.getLast().getId()+1,
                 new Date().getTime(),
-                currBlockchain.isEmpty() ? "0" : currBlockchain.get(currBlockchain.size() - 1).getHash(),
+                currBlockchain.isEmpty() ? "0" : currBlockchain.getLast().getHash(),
                 blockchain.getData(),
                 this.name,
-                100
+                Config.MINING_SUCCESS_AWARD
         );
         donateVCs();
         long startTime = System.currentTimeMillis();
